# nixlyinstall

./: build.sh  find_wayland_plugins.sh  flake.nix  internet-check.desktop  internet_check.py  internet_check_kde.sh  meson.build  nixlyinstall.desktop  run_nixlyinstall.sh
.cache/clangd/index/: main.cpp.A58B6DC2A4E96092.idx
src/: main.cpp  meson.build
